--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ asgiref==3.3.1
 astroid==2.5.1
 autopep8==1.5.5
 beautifulsoup4==4.9.3
+cached-property==1.5.2
 certifi==2020.12.5
 cffi==1.14.5
 chardet==4.0.0
@@ -19,10 +20,14 @@ django-filter==2.4.0
 django-precise-bbcode==1.2.13
 django-ranged-response==0.2.0
 django-simple-captcha==0.5.14
+django-simple-history==3.0.0
 django-templated-mail==1.1.1
+django-url-filter==0.3.15
 djangorestframework==3.12.4
 djangorestframework-simplejwt==4.6.0
+djangorestframework-word-filter==0.2.0
 djoser==2.1.0
+enum-compat==0.0.3
 filelock==3.0.12
 flake8==3.8.4
 idna==2.10
@@ -53,7 +58,7 @@ pytz==2021.1
 requests==2.25.1
 requests-oauthlib==1.3.0
 rope==0.18.0
-six==1.15.0
+six==1.16.0
 snowballstemmer==2.1.0
 social-auth-app-django==4.0.0
 social-auth-core==4.1.0
